@@ -2,7 +2,6 @@ package com.example.demo.security;
 
 import com.example.demo.filter.JwtTokenFilter;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -27,6 +26,7 @@ public class WebSecurityConfig {
     private final DaoAuthenticationProvider authProvider;
 
     private final JwtTokenFilter jwtTokenFilter;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.authorizeHttpRequests(auth -> auth
@@ -36,36 +36,35 @@ public class WebSecurityConfig {
                 .requestMatchers(HttpMethod.PUT, "/api/v1/users/*").hasAnyRole("USER", "ADMIN")
 
 
-                .requestMatchers(HttpMethod.GET ,"/api/v1/products/**" ).hasAnyRole("USER", "ADMIN")
-                .requestMatchers(HttpMethod.POST ,"/api/v1/cart/**" ).hasRole("USER")
-                .requestMatchers(HttpMethod.GET ,"/api/v1/cart/**" ).hasRole("USER")
-                .requestMatchers(HttpMethod.DELETE ,"/api/v1/payment/**" ).hasRole("USER")
-                .requestMatchers(HttpMethod.POST ,"/api/v1/products/**" ).hasRole("ADMIN")
-                .requestMatchers(HttpMethod.POST ,"/api/v1/products/**" ).hasRole("ADMIN")
-                .requestMatchers(HttpMethod.POST ,"/api/v1/products/**" ).hasRole("ADMIN")
-                .requestMatchers(HttpMethod.PUT ,"/api/v1/products/**" ).hasRole("ADMIN")
-                .requestMatchers(HttpMethod.DELETE ,"/api/v1/products/**" ).hasRole("ADMIN")
-
+                .requestMatchers(HttpMethod.GET, "/api/v1/products/**").hasAnyRole("USER", "ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/v1/cart/**").hasRole("USER")
+                .requestMatchers(HttpMethod.GET, "/api/v1/cart/**").hasRole("USER")
+                .requestMatchers(HttpMethod.DELETE, "/api/v1/payment/**").hasRole("USER")
+                .requestMatchers(HttpMethod.POST, "/api/v1/products/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/v1/products/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/v1/products/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/v1/products/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/v1/products/**").hasRole("ADMIN")
 
 
                 .anyRequest().authenticated()
         );
-        http.addFilterBefore(this.jwtTokenFilter , UsernamePasswordAuthenticationFilter.class);
-        http.authenticationProvider(this.authProvider) ;
+        http.addFilterBefore(this.jwtTokenFilter, UsernamePasswordAuthenticationFilter.class);
+        http.authenticationProvider(this.authProvider);
         http.csrf(csrf -> csrf.disable());
         http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
             @Override
             public void customize(CorsConfigurer<HttpSecurity> corsConfigurer) {
-               CorsConfiguration cors = new CorsConfiguration();
-               cors.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-               cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                cors.setAllowedHeaders(List.of("Content-Type", "Authorization" , "x-auth-token"));
+                CorsConfiguration cors = new CorsConfiguration();
+                cors.setAllowedOrigins(Arrays.asList("http://localhost:3000" ,"http://localhost:3001" ));
+                cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                cors.setAllowedHeaders(List.of("Content-Type", "Authorization", "x-auth-token"));
                 cors.addExposedHeader("x-auth-token");
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", cors);
-                corsConfigurer.configurationSource(source) ;
+                corsConfigurer.configurationSource(source);
             }
-        }) ;
+        });
 
         return http.build();
     }
